Wed Sep 26 14:40:13 2007  Eli Zaretskii      <eliz@gnu.org>

	* builtin.c (format_tree): Handle non-standard snprintf that
	returns a negative value when the buffer is too small.

Tue Sep 25 23:27:41 2007  Arnold D. Robbins  <arnold@skeeve.com>

	* ChangeLog: Removed all leading spaces. Fixed up formatting of
	entries to have capital letter after the colon. Fixed a number of
	entries to have the '*' in the right place. ASCII instead of ascii.
	Capitalize Linux. (Is this anal-retentive or what? Sheesh.)

Tue Sep 25 08:24:11 2007  KIMURA Koichi      <kimura.koichi@canon.co.jp>

	* awk.h: Add include of <io.h> for Visual Studio.
	* regex_internal.h: Do the right thing for replacing alloca.

Sat Sep 22 23:26:27 2007  Arnold D. Robbins  <arnold@skeeve.com>

	* field.c (set_FIELDWIDTHS): Restore behavior of 3.1.4 that allowed
	FIELDWIDTHS to be "" without crashing, and such a value has NF = 0.
	Yet Another Dark Corner. Thanks to Glenn Zazulia <gnu@t1.zazu.com>
	for pointing out the problem.

	Unrelated:

	* builtin.c (format_free): Make `quote_flag' not sticky. Thanks to
	Ulrich Drepper for pointing this out.
	* main.c (main): Adjust calls to `setlocale' and `localeconv' so that
	the %'d flag will work even if not using the locale's decimal point.

Thu Sep 20 21:02:41 2007  Arnold D. Robbins  <arnold@skeeve.com>

	* array.c (hash, awk_hash, gst_hash_string): Add fourth argument
	pointer to retrieve code. Only assign a value if not NULL.
	Fix most places to pass NULL for fourth argument.
	(assoc_lookup): Save the code in the node for use in growing the
	array later.
	(grow_table): Use the saved code instead of recomputing each time.
	* awk.h (NODE hash): Add `code' member and `ahcode' macro.
	(hash): Revise declaration.
	* awkgram.y: Revise calls to `hash'.

Tue Aug 21 17:47:07 2007  Arnold D. Robbins  <arnold@skeeve.com>

	* main.c (copyleft): Cite version 3 of the license.
	* dfa.c: Minor edits to sync with grep 2.5.3.
