@@ -1,3 +1,12 @@
+Wed Dec 19 19:53:38 UTC 2007 Juergen Kahrs <jkahrs@users.sourceforge.net>
+
+        Sync with savannah gawk cvsps 146.
+
+	* Makefile.am (.c.i, SUFFIXES): Remove, `.i' is unused.
+	* Makefile.am (MAINTAINERCLEANFILES): Remove awkgram.c;
+	Automake takes care of that.
+	* builtin.c: Cleaned up comment about NaN and Inf.
+
 Wed Dec 19 18:58:07 UTC 2007 Juergen Kahrs <jkahrs@users.sourceforge.net>
 
         Sync with savannah gawk cvsps 144.
