@@ -1,3 +1,9 @@
+Thu Sep 27 21:36:23 2007  Stepan Kasal       <skasal@redhat.com>
+
+	* Makefile.am (.c.i, SUFFIXES): Remove, `.i' is unused.
+	* Makefile.am (MAINTAINERCLEANFILES): Remove awkgram.c;
+	Automake takes care of that.
+
 Wed Sep 26 14:40:13 2007  Eli Zaretskii      <eliz@gnu.org>
 
 	* builtin.c (format_tree): Handle non-standard snprintf that
